@@ -8,6 +8,7 @@
  361603 translatability problems for message strings (Flammie Pirinen)
  307028 editor error: cursor positioning on indented lines (Richard Rasker)
  354779 pan no longer attempts to reconnect (Jason Auvenshine)
+ 400329 error opening newsrc file after adding new servers (Pavel)
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
